logs/bjsonrpc.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bjsonrpc'...
Compiling './lib/python3.5/site-packages/bjsonrpc/connection.py'...
***   File "./lib/python3.5/site-packages/bjsonrpc/connection.py", line 402
    raise ValueError, "Invalid object identifier"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bjsonrpc/handlers.py'...
***   File "./lib/python3.5/site-packages/bjsonrpc/handlers.py", line 150
    raise NameError, "Method with name %s already in the class methods!" % (method.__name__)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bjsonrpc/jsonlib.py'...
***   File "./lib/python3.5/site-packages/bjsonrpc/jsonlib.py", line 39
    print "FATAL: No suitable json library found!"
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bjsonrpc/request.py'...
***   File "./lib/python3.5/site-packages/bjsonrpc/request.py", line 120
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bjsonrpc-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
